SVN_SILENT made messages (.desktop file)
svn path=/trunk/playground/artwork/smaragd/; revision=1129996

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -1,4 +1,7 @@
 [Desktop Entry]
 Name=Smaragd
+Name[pt]=Smaragd
+Name[sv]=Smaragd
+Name[uk]=Smaragd
 Name[x-test]=xxSmaragdxx
 X-KDE-Library=kwin3_smaragd
