SVN_SILENT made messages (.desktop file)
svn path=/trunk/playground/artwork/smaragd/; revision=1130387

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -1,6 +1,8 @@
 [Desktop Entry]
 Name=Smaragd
+Name[es]=Smaragd
 Name[pt]=Smaragd
+Name[pt_BR]=Smaragd
 Name[sv]=Smaragd
 Name[uk]=Smaragd
 Name[x-test]=xxSmaragdxx
