Add configuration dialog
The only configurable option right now is "UseKWinTextColors",
which allows the user to override theme colors for the title text
by systemsettings colors.

svn path=/trunk/playground/artwork/smaragd/; revision=1134935

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,3 +34,5 @@ install (TARGETS kwin3_smaragd DESTINATION ${PLUGIN_INSTALL_DIR})
 install (FILES smaragd.desktop DESTINATION ${DATA_INSTALL_DIR}/kwin)
 install (FILES smaragd.knsrc DESTINATION ${CONFIG_INSTALL_DIR})
 
+add_subdirectory (config)
+
