Add (optional) decoration shadows
svn path=/trunk/playground/artwork/smaragd/; revision=1137901

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ set (smaragd_SOURCES
     kwin_smaragd.cpp
     emerald.c
     main.c
+    shadowengine.cpp
 )
 
 kde4_add_plugin (kwin3_smaragd ${smaragd_SOURCES} ${emerald_engines_SOURCES})
