SVN_SILENT made messages (.desktop file)
svn path=/trunk/playground/artwork/smaragd/; revision=1138162

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -3,6 +3,7 @@ Name=Smaragd
 Name[en_GB]=Smaragd
 Name[es]=Smaragd
 Name[et]=Smaragd
+Name[it]=Smaragd
 Name[nds]=Smaragd
 Name[pt]=Smaragd
 Name[pt_BR]=Smaragd
