SVN_SILENT made messages (.desktop file)
svn path=/trunk/playground/artwork/smaragd/; revision=1138536

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -8,6 +8,7 @@ Name[nds]=Smaragd
 Name[pt]=Smaragd
 Name[pt_BR]=Smaragd
 Name[sv]=Smaragd
+Name[tr]=Smaragd
 Name[uk]=Smaragd
 Name[x-test]=xxSmaragdxx
 X-KDE-Library=kwin3_smaragd
