SVN_SILENT made messages (.desktop file)
svn path=/trunk/playground/artwork/smaragd/; revision=1150140

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -7,6 +7,7 @@ Name[it]=Smaragd
 Name[nds]=Smaragd
 Name[pt]=Smaragd
 Name[pt_BR]=Smaragd
+Name[ru]=Smaragd
 Name[sv]=Smaragd
 Name[tr]=Smaragd
 Name[uk]=Smaragd
