SVN_SILENT made messages (.desktop file)
svn path=/trunk/playground/artwork/smaragd/; revision=1181148

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -6,6 +6,7 @@ Name[et]=Smaragd
 Name[ga]=Smaragd
 Name[it]=Smaragd
 Name[nds]=Smaragd
+Name[nl]=Smaragd
 Name[pt]=Smaragd
 Name[pt_BR]=Smaragd
 Name[ru]=Smaragd
