SVN_SILENT made messages (.desktop file)

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -4,6 +4,7 @@ Name[en_GB]=Smaragd
 Name[es]=Smaragd
 Name[et]=Smaragd
 Name[ga]=Smaragd
+Name[hu]=Smaragd
 Name[it]=Smaragd
 Name[nds]=Smaragd
 Name[nl]=Smaragd
@@ -13,5 +14,6 @@ Name[ru]=Smaragd
 Name[sv]=Smaragd
 Name[tr]=Smaragd
 Name[uk]=Smaragd
+Name[x-test]=xxSmaragdxx
 Name[zh_TW]=Smaragd
 X-KDE-Library=kwin3_smaragd
