SVN_SILENT made messages (.desktop file)

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -5,6 +5,7 @@ Name[de]=Smaragd
 Name[en_GB]=Smaragd
 Name[es]=Smaragd
 Name[et]=Smaragd
+Name[fr]=Smaragd
 Name[ga]=Smaragd
 Name[hu]=Smaragd
 Name[it]=Smaragd
