SVN_SILENT made messages (.desktop file)

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -12,6 +12,7 @@ Name[hu]=Smaragd
 Name[it]=Smaragd
 Name[nds]=Smaragd
 Name[nl]=Smaragd
+Name[pl]=Smaragd
 Name[pt]=Smaragd
 Name[pt_BR]=Smaragd
 Name[ru]=Smaragd
