SVN_SILENT made messages (.desktop file)

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -16,6 +16,7 @@ Name[pl]=Smaragd
 Name[pt]=Smaragd
 Name[pt_BR]=Smaragd
 Name[ru]=Smaragd
+Name[sk]=Smaragd
 Name[sv]=Smaragd
 Name[tr]=Smaragd
 Name[uk]=Smaragd
