SVN_SILENT made messages (.desktop file)

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -10,6 +10,7 @@ Name[et]=Smaragd
 Name[fi]=Smaragd
 Name[fr]=Smaragd
 Name[ga]=Smaragd
+Name[gl]=Smaragd
 Name[hu]=Smaragd
 Name[it]=Smaragd
 Name[nds]=Smaragd
