--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -3,6 +3,7 @@ Name=Smaragd
 Name[bg]=Смарагд
 Name[bs]=Smaragd
 Name[ca]=Smaragd
+Name[ca@valencia]=Smaragd
 Name[cs]=Smaragd
 Name[de]=Smaragd
 Name[en_GB]=Smaragd
