SVN_SILENT made messages (.desktop file)

--- a/src/smaragd.desktop
+++ b/src/smaragd.desktop
@@ -15,6 +15,7 @@ Name[ga]=Smaragd
 Name[gl]=Smaragd
 Name[hu]=Smaragd
 Name[it]=Smaragd
+Name[mr]=स्मराग्द
 Name[nds]=Smaragd
 Name[nl]=Smaragd
 Name[pl]=Smaragd
